attempting fix for homepage hero overflow on mobile

--- a/src/app/home/scss/_home.scss
+++ b/src/app/home/scss/_home.scss
@@ -1,5 +1,9 @@
 .home {
 
+	section {
+		overflow: hidden;
+	}
+
 	.hero {
 		text-align: center;
 		height: 640px;
